# MathResources

./: CMakeLists.txt  Tester.cpp  main.cpp
headers/: Matrix3.h  Matrix4.h  Tester.h  Vector2D.h  Vector3D.h  Vector4D.h  transformation.h
src/: Matrix3.cpp  Matrix4.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp  transformation.cpp
